ik heb builder en strategy pattern erin gezet